[package]
name = "online-test-pad-ukr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.wasm-bindgen]
version = "0.2.95"

[dependencies.web-sys]
version = "0.3.72"
features = ["Url", "HtmlAnchorElement", "Blob", "Window", "Document", "HtmlInputElement", "InputEvent", "FileList", "File", "FileReader", "FileReaderSync"]

[dependencies.aho-corasick]
version = "1.1.3"
default-features = false

[dependencies.regex]
version = "1.11.1"

[dependencies.zip]
version = "2.2.1"
default-features = false
features = ["deflate64", "deflate", "lzma", "xz"]
